# go-algorand

./: .gitignore  .gitmodules  1  Cargo.toml  WASM_README.md  bench.rb  fibo.aot  go.mod  go.sum  rust-analyzer.json
.cargo/: config.toml
cmd/algod/: main.go
cmd/goal/: clerk.go
daemon/algod/api/: algod.oas2.json  algod.oas3.yml
data/: txHandler.go  txHandler_test.go
data/bookkeeping/: block.go  block_test.go
data/transactions/: application.go  groupsize.go  groupsize_test.go  signedtxn.go  transaction.go  transaction_test.go
data/transactions/logic/: assembler.go  assembler_test.go  box.go  doc.go  eval.go  evalAppTxn_test.go  evalStateful_test.go  eval_test.go  fields.go  opcodes.go  resources.go  rust.go  teal.tmLanguage.json  wamrtime.go
data/transactions/verify/: txn.go  txn_test.go
data/txntest/: txn.go
ledger/: apptxn_test.go  ledger_perf_test.go  simple_test.go
ledger/apply/: application.go
ledger/eval/: eval.go  eval_test.go
ledger/eval/prefetcher/: prefetcher.go  prefetcher_alignment_test.go  prefetcher_test.go
ledger/simulation/: resources.go
libgoal/: transactions.go
protocol/: txntype.go
src/: ffi.rs  lib.rs  wasm.rs
test/wasm/: .gitignore  build.sh  minify.sh  test.sh
test/wasm/algokit_rs/: Cargo.toml
test/wasm/algokit_rs/src/: lib.rs
test/wasm/arc200/: Cargo.toml
test/wasm/arc200/.cargo/: config.toml
test/wasm/arc200/src/: lib.rs
test/wasm/assembly_script/: asconfig.json  package-lock.json  package.json
test/wasm/assembly_script/assembly/: index.ts
test/wasm/fibo/: Cargo.toml
test/wasm/fibo/src/: algokit.rs  lib.rs  main.rs
test/wasm/host_hello/: Cargo.toml
test/wasm/host_hello/src/: lib.rs  (+1 more)
test/wasm/instrument/: Cargo.toml
test/wasm/int_1/: Cargo.toml
test/wasm/int_1/.cargo/: config.toml
test/wasm/int_1/src/: lib.rs
test/wasm/rust/: Cargo.toml
test/wasm/tinygo/: program.go
test/wasm/zig/: build.zig
(+6 files in other folders)
