[package]
name = "go-algorand"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
rust2go = "0.4.0"
wamr-rust-sdk = { git = "https://github.com/bytecodealliance/wamr-rust-sdk", version = "1.0.0" }
once_cell = "1.19"

[build-dependencies]
rust2go = { version = "0.4.0", features = ["build"] }
