[package]
name = "algokit"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization
panic = "abort"       # Remove panic handling code
strip = true          # Strip symbols

[dependencies]
crypto-bigint = { version = "0.6.1", default-features = false, optional = true }
talc = { version = "4.4.3", default-features = false, features = ["lock_api"] }

[features]
bigint = ["dep:crypto-bigint"]
default = ["bigint"]
