[package]
name = "arc200"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
algokit = { version = "0.1.0", path = "../algokit_rs" }
crypto-bigint = { version = "0.6.1", default-features = false, optional = true }

[features]
bigint = ["dep:crypto-bigint"]
default = ["bigint"]
